# mtg-event-locator

./: .gitignore  README.md  lp-calendar.py  pyproject.toml  sample.env
mtg_event_locator/: generate_calendars.py
mtg_event_locator/lpf/: calendar.py
