[project]
name = "lpp-calendar"
version = "0.2.0.dev1"
description = "Calendar converter for MTG French Pauper events"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "icalendar>=5",
    "packaging>=24.0",
    "python-dotenv>=0.21",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
