[project]
name = "mtg-event-locator"
version = "0.2.0.dev2"
description = "Event locator for Magic The Gathering (mainly for the French Pauper League)"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "icalendar>=5",
    "packaging>=24.0",
    "python-dotenv>=0.21",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
